@@ -1,4 +1,6 @@
 2006-05-25  Don Allingham  <don@gramps-project.org>
+	* src/Merge/_MergePlace.py: handle notes
+	* src/glade/mergedata.glade: handle notes
 	* src/DataViews/_PersonView.py: Merge module support
 	* src/Merge/_MergeSource.py: broken out of MergeData.py
 	* src/Merge/__init__.py: support of module
